--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 *.blg
 
 Exercises/*.pdf
+
+Labs/VersionControl/VersionControl.pdf
+
+LectureNotes/ResearchSkills.pdf
+
+LectureNotes/ResearchSkills.pdf
