commit beginning scientific writing script

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ Labs/VersionControl/VersionControl.pdf
 LectureNotes/ResearchSkills.pdf
 
 LectureNotes/ResearchSkills.pdf
+
+Labs/ScientificWriting/Script/writing.pdf
