moved writing to main script

--- a/.gitignore
+++ b/.gitignore
@@ -21,15 +21,19 @@ LectureNotes/ResearchSkills.pdf
 LectureNotes/ResearchSkills.pdf
 
 Labs/ScientificWriting/Script/writing.pdf
-<<<<<<< HEAD
-
-=======
 
 *.dvi
->>>>>>> origin/master
 
 Labs/ScientificWriting/Script/tufte.bst
 Labs/ScientificWriting/Script/tufte-handout.cls
 Labs/ScientificWriting/Script/tufte-common.def
 Labs/ScientificWriting/Script/tufte-book.cls
 Labs/ScientificWriting/Script/elsarticle-harv.bst
+
+Labs/R/Script/EssentialStats-concordance.tex
+
+Labs/R/Script/EssentialStats.pdf
+
+Labs/R/Script/EssentialStats.tex
+
+
