--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Labs/R/Script/EssentialStats.tex
 
 
 Labs/R/Practicals/StatisticalAnalysisInR/Statistics.html
+LectureNotes/ResearchSkills.pdf
+LectureNotes/ResearchSkills.pdf
