graphics to rmd

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ Labs/R/Script/EssentialStats.tex
 Labs/R/Practicals/StatisticalAnalysisInR/Statistics.html
 LectureNotes/ResearchSkills.pdf
 LectureNotes/ResearchSkills.pdf
+Labs/Statistics/Practicals/GraphicsInR/rst_interface.png
+*.png
