--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ LectureNotes/ResearchSkills.pdf
 LectureNotes/ResearchSkills.pdf
 Labs/Statistics/Practicals/GraphicsInR/rst_interface.png
 *.png
+Labs/Statistics/Script/EssentialStats.pdf
+Labs/Statistics/Script/EssentialStats-concordance.tex
