--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Labs/Statistics/Script/EssentialStatistics-concordance.tex
 Labs/Statistics/Script/EssentialStatistics.tex
 
 Labs/VersionControl/Practical/VersionControl.tex
+Labs/Statistics/Script/.Rhistory
