--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Labs/Statistics/Script/EssentialStatistics.tex
 
 Labs/VersionControl/Practical/VersionControl.tex
 Labs/Statistics/Script/.Rhistory
+Labs/Statistics/Practicals/GraphicsInR/Rgraphics.html
