--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Labs/Statistics/Script/EssentialStatistics.tex
 Labs/VersionControl/Practical/VersionControl.tex
 Labs/Statistics/Script/.Rhistory
 Labs/Statistics/Practicals/GraphicsInR/Rgraphics.html
+Labs/ProjectOrganization/ExampleProject/thesis/mydocument.pdf
