--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Labs/VersionControl/Practical/VersionControl.tex
 Labs/Statistics/Script/.Rhistory
 Labs/Statistics/Practicals/GraphicsInR/Rgraphics.html
 Labs/ProjectOrganization/ExampleProject/thesis/mydocument.pdf
+*.Rhistory
