--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ Labs/Statistics/Script/.Rhistory
 Labs/Statistics/Practicals/GraphicsInR/Rgraphics.html
 Labs/ProjectOrganization/ExampleProject/thesis/mydocument.pdf
 *.Rhistory
+Labs/Statistics/Script/EssentialStatistics.pdf
+Labs/Statistics/Script/EssentialStatistics.pdf
