--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ Labs/ProjectOrganization/ExampleProject/thesis/mydocument.pdf
 *.Rhistory
 
 Labs/Statistics/Script/EssentialStatistics-*.pdf
+
+Labs/Statistics/Practicals/GraphicsInR/Archive.zip
+
+Labs/Statistics/Practicals/GraphicsInR/EssentialStatistics.pdf
