--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ Labs/Statistics/Script/EssentialStatistics-*.pdf
 Labs/Statistics/Practicals/GraphicsInR/Archive.zip
 
 Labs/Statistics/Practicals/GraphicsInR/EssentialStatistics.pdf
+
+Labs/LaTeX/Practical/how_to_latex.pdf
