--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,13 @@ Labs/Statistics/Practicals/GraphicsInR/Archive.zip
 Labs/Statistics/Practicals/GraphicsInR/EssentialStatistics.pdf
 
 Labs/LaTeX/Practical/how_to_latex.pdf
+.Rproj.user
+
+Labs/Statistics/Script/Sweave.sty
+
+Labs/Statistics/Script/Sweavel.sty
+
+Labs/Statistics/Script/figure/
+
+Labs/Statistics/Script/EssentialStatistics.pdf
+
