--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ Labs/Statistics/Script/figure/
 
 Labs/Statistics/Script/EssentialStatistics.pdf
 
+
+LectureNotes/ResearchSkills.pdf
+
+Labs/Statistics/Script/EssentialStatistics.pdf
