--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Labs/Statistics/Script/EssentialStatistics.pdf
 LectureNotes/ResearchSkills.pdf
 
 Labs/Statistics/Script/EssentialStatistics.pdf
+
+Labs/Statistics/Script/EssentialStatistics.pdf
