--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,7 @@ LectureNotes/ResearchSkills.pdf
 Labs/Statistics/Script/EssentialStatistics.pdf
 
 Labs/Statistics/Script/EssentialStatistics.pdf
+
+Labs/LaTeX/Script/how_to_latex.pdf
+
+LectureNotes/ResearchSkills.pdf
