--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ Labs/Statistics/Script/EssentialStatistics.pdf
 Labs/LaTeX/Script/how_to_latex.pdf
 
 LectureNotes/ResearchSkills.pdf
+
+LectureNotes/ResearchSkills.tex
