--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ Labs/Statistics/Script/EssentialStatistics.bbl
 Labs/LaTeX/Practical.zip
 
 Labs/LaTeX/MoreLatexTemplatesHidden/
+Labs/LaTeX/Practical.zip
